add: resolução de nivel fácil exercicios base olist

--- a/6.Janeiro.2023/tipo-de-dados.ipynb
+++ b/6.Janeiro.2023/tipo-de-dados.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Database Source: https://www.kaggle.com/datasets/olistbr/brazilian-ecommerce"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -260,13 +267,6 @@
    ],
    "source": [
     "produtos.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tipo de dados estatísticos "
    ]
   }
  ],
