--- a/Análise de dados com framework pandas/Exercicios base olist - nível fácil.ipynb
+++ b/Análise de dados com framework pandas/Exercicios base olist - nível fácil.ipynb
@@ -5,21 +5,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Resolução de exercicios base olist ##"
+    "## Resolução de exercicios base olist - nível fácil ##"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,6 @@
     "orders = pd.read_csv(\"Datasets/olist_orders_dataset.csv\")\n",
     "products = pd.read_csv(\"Datasets/olist_products_dataset.csv\")\n",
     "sellers = pd.read_csv(\"Datasets/olist_sellers_dataset.csv\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Nivel Fácil ###"
    ]
   },
   {
@@ -391,12 +383,21 @@
    "source": [
     "# 6. De onde são a maioria dos clientes?\n",
     "\n",
-    "customer[['customer_state','customer_city','customer_unique_id']].groupby(['customer_state','customer_city']).count().sort_values(by=['customer_unique_id'],ascending=False).head(5)\n"
+    "customer[['customer_state','customer_city','customer_unique_id']].groupby(['customer_state','customer_city']).count().sort_values(by=['customer_unique_id'],ascending=False).head(5)\n",
+    "\n",
+    "#customer[\"customer_state\"].value_counts\n",
+    "#customer[\"customer_city\"].value_counts\n",
+    "\n",
+    "# o value counts é uma contagem relativa a chave primária\n",
+    "\n",
+    "#Outra solução\n",
+    "    #chave = [\"customer_state\",\"customer_city\"]\n",
+    "    #customer.groupby(by=chave)[\"customer_id\"].count().sort_values(ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -405,117 +406,115 @@
        "1.1417306873695092"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 7. Qual o número médio de produtos vendidos por ordem?\n",
+    "# 1 agrupar por ordem\n",
+    "# 2 Contar quantos produtos tenho para cada ordem [\"product_id\"].count()\n",
+    "# 3 Calcular a media mean()\n",
     "\n",
-    "order_items['order_id'].value_counts().mean()"
+    "order_items.groupby(by=\"order_id\")[\"product_id\"].count().mean()\n",
+    " \n",
+    "# Outra solução:\n",
+    "    #order_items['order_id'].value_counts().mean() \n",
+    "    # Nesse caso a chave não importaria e por isso a solução funcionou."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "154.10038041699553"
+       "order_id\n",
+       "00010242fe8c5a6d1ba2dd792cb16214     58.90\n",
+       "00018f77f2f0320c557190d7a144bdd3    239.90\n",
+       "000229ec398224ef6ca0657da4fc703e    199.00\n",
+       "00024acbcdf0a6daa1e931b038114c75     12.99\n",
+       "00042b26cf59d7ce69dfabb4e55b4fd9    199.90\n",
+       "                                     ...  \n",
+       "fffc94f6ce00a00581880bf54a75a037    299.99\n",
+       "fffcd46ef2263f404302a634eb57f7eb    350.00\n",
+       "fffce4705a9662cd70adb13d4a31832d     99.90\n",
+       "fffe18544ffabc95dfada21779c9644f     55.99\n",
+       "fffe41c64501cc87c801fd61db3f6244     43.00\n",
+       "Name: price, Length: 98666, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 8. Qual é a média de preços por ordem de venda?\n",
+    "# O valor do pagamento na tabela de payments deve incluir outros valores além do valor bruto do produto\n",
     "\n",
-    "order_payments['payment_value'].mean()"
+    "#order_payments['payment_value'].mean()\n",
+    "    #154\n",
+    "\n",
+    "# Passo a passo: \n",
+    "    # 1. agrupar a tabela de order itens por items \n",
+    "    # 2. fazer a média\n",
+    "\n",
+    "# order_items.groupby(by='order_id')[\"price\"].sum().mean()\n",
+    "    #137 - Esse seria um número global\n",
+    "\n",
+    "order_items.groupby(by='order_id')[\"price\"].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seller_id</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4869f7a5dfa277a7dca6462dcf3b52b2</th>\n",
-       "      <td>229472.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53243585a1d6dc2643021fd1853d8905</th>\n",
-       "      <td>222776.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4a3ca9315b744ce9f8e9374361493884</th>\n",
-       "      <td>200472.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>fa1c13f2614d7b5c4749cbc52fecda94</th>\n",
-       "      <td>194042.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7c67e1448b00f6e969d365cea6b010ab</th>\n",
-       "      <td>187923.89</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                      price\n",
-       "seller_id                                  \n",
-       "4869f7a5dfa277a7dca6462dcf3b52b2  229472.63\n",
-       "53243585a1d6dc2643021fd1853d8905  222776.05\n",
-       "4a3ca9315b744ce9f8e9374361493884  200472.92\n",
-       "fa1c13f2614d7b5c4749cbc52fecda94  194042.03\n",
-       "7c67e1448b00f6e969d365cea6b010ab  187923.89"
+       "seller_id\n",
+       "4869f7a5dfa277a7dca6462dcf3b52b2    249640.70\n",
+       "7c67e1448b00f6e969d365cea6b010ab    239536.44\n",
+       "53243585a1d6dc2643021fd1853d8905    235856.68\n",
+       "4a3ca9315b744ce9f8e9374361493884    235539.96\n",
+       "fa1c13f2614d7b5c4749cbc52fecda94    204084.73\n",
+       "da8622b14eb17ae2831f4ac5b9dab84a    185192.32\n",
+       "7e93a43ef30c4f03f38b393420bc753a    182754.05\n",
+       "1025f0e2d44d7041d6cf58b6550e0bfa    172860.69\n",
+       "7a67c85e85bb2ce8582c35f2203ad736    162648.38\n",
+       "955fee9216a65b617aa5c0531780ce60    160602.68\n",
+       "6560211a19b47992c3666cc44a7e94c0    151265.77\n",
+       "1f50f920176fa81dab994f9023523100    142104.98\n",
+       "46dc3b2cc0980fb8ec44634e21d2718e    139909.69\n",
+       "a1043bafd471dff536d0c462352beb48    133745.25\n",
+       "cc419e0650a3c5ba77189a1882b7556a    129957.41\n",
+       "620c87c171fb2a6dd6e8bb4dec959fc6    128909.71\n",
+       "5dceca129747e92ff8ef7a997dc4f8ca    125816.92\n",
+       "7d13fca15225358621be4086e1eb0964    122261.02\n",
+       "3d871de0142ce09b7081e2b9d1733cb1    117347.71\n",
+       "edb1ef5e36e0c8cd84eb3c9b003e486d     83189.65\n",
+       "Name: Total_price, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 9. Quem são os principais vendedores que trazem maior faturamento para Olist?\n",
-    "order_items[['seller_id','price']].groupby(['seller_id']).sum().sort_values(by=['price'],ascending=False).head(5)\n",
     "\n",
-    "#df_seller_revenue.groupby(['seller_id']).sum()\n"
+    "#Será que uma ordem tem mais de um vendedor\n",
+    "    #order_items.groupby(by='order_id')['seller_id'].nunique().sort_values(ascending=False)\n",
+    "    #Sim, Isso dificulta relacionar com a tabela de payment values\n",
+    "\n",
+    "order_items['Total_price'] = order_items['price'] + order_items ['freight_value']\n",
+    "order_items.groupby(by='seller_id')['Total_price'].sum().sort_values(ascending=False).head(20)\n"
    ]
   }
  ],
@@ -535,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
